// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Groups /> Can be rendered 1`] = `
<dialog
  className="kpm-modal"
>
  <button
    className="kpm-modal-back-button kpm-mobile"
    onClick={[Function]}
  >
    Back to Personal Menu
  </button>
  <div
    className="kpm-modal-content kpm-groups"
  >
    <header
      className="kpm-modal-content-header"
    >
      <h2>
        My Groups
      </h2>
      <aside
        className="kpm-modal-content-header-actions"
      >
        <a
          href="https://www.kth.se/search/?entityFilter=social-group&filterLabel=Groups"
          title="Search for interesting groups to follow"
        >
          Find groups
        </a>
        <a
          href="https://www.kth.se/social/group-create/"
        >
          Create new group
        </a>
        <a
          className="icon"
          href="https://www.kth.se/social/home/settings/groups"
        >
          <svg
            height="1.2em"
            viewBox="0 0 86 86"
            width="1.2em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Select how you are notified, how the schedule is displayed, or remove subscriptions.
            </title>
            <path
              d="M11.41 72.18a42.98 42.98 0 0 0 20.65 12.41A10.62 10.62 0 0 1 32 83.5a10.5 10.5 0 1 1 20.91 1.35 42.95 42.95 0 0 0 21.3-12.28 10.5 10.5 0 0 1 10.3-18.3 43.05 43.05 0 0 0 0-22.54 10.5 10.5 0 0 1-10.3-18.3A42.94 42.94 0 0 0 52 .94l.01.56a10.5 10.5 0 0 1-21 .2 43 43 0 0 0-19.59 12.12A10.49 10.49 0 0 1 1.38 32.16a43.07 43.07 0 0 0 0 21.68 10.5 10.5 0 0 1 10.04 18.34zM42 57.94a15 15 0 1 0 0-30 15 15 0 0 0 0 30z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </aside>
    </header>
    <nav
      className="kpm-tab-filter"
    >
      <ul>
        <li>
          <button
            onClick={[Function]}
          >
            Favourites
          </button>
        </li>
        <li
          className="active"
        >
          <button
            onClick={[Function]}
          >
            All Subscriptions
          </button>
        </li>
      </ul>
    </nav>
    <div
      className="kpm-loading-placeholder"
    >
      <div
        className="kpm-loader"
      />
    </div>
    <ul />
  </div>
</dialog>
`;

exports[`<Groups /> Can be rendered with data and none starred 1`] = `
<dialog
  className="kpm-modal active"
>
  <button
    className="kpm-modal-back-button kpm-mobile"
    onClick={[Function]}
  >
    Back to Personal Menu
  </button>
  <div
    className="kpm-modal-content kpm-groups"
  >
    <header
      className="kpm-modal-content-header"
    >
      <h2>
        My Groups
      </h2>
      <aside
        className="kpm-modal-content-header-actions"
      >
        <a
          href="https://www.kth.se/search/?entityFilter=social-group&filterLabel=Groups"
          title="Search for interesting groups to follow"
        >
          Find groups
        </a>
        <a
          href="https://www.kth.se/social/group-create/"
        >
          Create new group
        </a>
        <a
          className="icon"
          href="https://www.kth.se/social/home/settings/groups"
        >
          <svg
            height="1.2em"
            viewBox="0 0 86 86"
            width="1.2em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Select how you are notified, how the schedule is displayed, or remove subscriptions.
            </title>
            <path
              d="M11.41 72.18a42.98 42.98 0 0 0 20.65 12.41A10.62 10.62 0 0 1 32 83.5a10.5 10.5 0 1 1 20.91 1.35 42.95 42.95 0 0 0 21.3-12.28 10.5 10.5 0 0 1 10.3-18.3 43.05 43.05 0 0 0 0-22.54 10.5 10.5 0 0 1-10.3-18.3A42.94 42.94 0 0 0 52 .94l.01.56a10.5 10.5 0 0 1-21 .2 43 43 0 0 0-19.59 12.12A10.49 10.49 0 0 1 1.38 32.16a43.07 43.07 0 0 0 0 21.68 10.5 10.5 0 0 1 10.04 18.34zM42 57.94a15 15 0 1 0 0-30 15 15 0 0 0 0 30z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </aside>
    </header>
    <nav
      className="kpm-tab-filter"
    >
      <ul>
        <li>
          <button
            onClick={[Function]}
          >
            Favourites
          </button>
        </li>
        <li
          className="active"
        >
          <button
            onClick={[Function]}
          >
            All Subscriptions
          </button>
        </li>
      </ul>
    </nav>
    <ul>
      <li
        className="kpm-groups-item starrable"
      >
        <button
          className="icon star"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 20 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,13.39l-3.76,2.27,.99-4.28-3.32-2.88,4.38-.37,1.71-4.04,1.71,4.04,4.38,.37-3.32,2.88,.99,4.28m6.24-8.42l-7.19-.61L10,0l-2.81,6.63L0,7.24l5.45,4.73-1.63,7.03,6.18-3.73,6.18,3.73-1.64-7.03s5.46-4.73,5.46-4.73Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <a
          href="//:test/group_1"
        >
          Test Group 1
        </a>
      </li>
      <li
        className="kpm-groups-item starrable"
      >
        <button
          className="icon star"
          onClick={[Function]}
        >
          <svg
            viewBox="0 0 20 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,13.39l-3.76,2.27,.99-4.28-3.32-2.88,4.38-.37,1.71-4.04,1.71,4.04,4.38,.37-3.32,2.88,.99,4.28m6.24-8.42l-7.19-.61L10,0l-2.81,6.63L0,7.24l5.45,4.73-1.63,7.03,6.18-3.73,6.18,3.73-1.64-7.03s5.46-4.73,5.46-4.73Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <a
          href="//:test/group_2"
        >
          Test Group 2
        </a>
      </li>
    </ul>
  </div>
</dialog>
`;

exports[`<Groups /> Can be rendered with data and one starred 1`] = `
<dialog
  className="kpm-modal active"
>
  <button
    className="kpm-modal-back-button kpm-mobile"
    onClick={[Function]}
  >
    Back to Personal Menu
  </button>
  <div
    className="kpm-modal-content kpm-groups"
  >
    <header
      className="kpm-modal-content-header"
    >
      <h2>
        My Groups
      </h2>
      <aside
        className="kpm-modal-content-header-actions"
      >
        <a
          href="https://www.kth.se/search/?entityFilter=social-group&filterLabel=Groups"
          title="Search for interesting groups to follow"
        >
          Find groups
        </a>
        <a
          href="https://www.kth.se/social/group-create/"
        >
          Create new group
        </a>
        <a
          className="icon"
          href="https://www.kth.se/social/home/settings/groups"
        >
          <svg
            height="1.2em"
            viewBox="0 0 86 86"
            width="1.2em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Select how you are notified, how the schedule is displayed, or remove subscriptions.
            </title>
            <path
              d="M11.41 72.18a42.98 42.98 0 0 0 20.65 12.41A10.62 10.62 0 0 1 32 83.5a10.5 10.5 0 1 1 20.91 1.35 42.95 42.95 0 0 0 21.3-12.28 10.5 10.5 0 0 1 10.3-18.3 43.05 43.05 0 0 0 0-22.54 10.5 10.5 0 0 1-10.3-18.3A42.94 42.94 0 0 0 52 .94l.01.56a10.5 10.5 0 0 1-21 .2 43 43 0 0 0-19.59 12.12A10.49 10.49 0 0 1 1.38 32.16a43.07 43.07 0 0 0 0 21.68 10.5 10.5 0 0 1 10.04 18.34zM42 57.94a15 15 0 1 0 0-30 15 15 0 0 0 0 30z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </aside>
    </header>
    <nav
      className="kpm-tab-filter"
    >
      <ul>
        <li
          className="active"
        >
          <button
            onClick={[Function]}
          >
            Favourites
          </button>
        </li>
        <li>
          <button
            onClick={[Function]}
          >
            All Subscriptions
          </button>
        </li>
      </ul>
    </nav>
    <ul>
      <li
        className="kpm-groups-item starrable active"
      >
        <button
          className="icon star"
          onClick={[Function]}
        >
          <svg
            className="active"
            viewBox="0 0 20 19"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,15.27l6.18,3.73-1.64-7.03,5.46-4.73-7.19-.62L10,0l-2.81,6.62L0,7.24l5.45,4.73-1.63,7.03,6.18-3.73Z"
              fill="currentColor"
            />
          </svg>
        </button>
        <a
          href="//:test/group_1"
        >
          Test Group 1 starred
        </a>
      </li>
    </ul>
  </div>
</dialog>
`;
